# Referral-Network-URMC

./: .gitignore  LICENSE  pyproject.toml  readme.md
assets/: logo.psd
referral_network/: app.py  config.py  helper.py  visualize.py
referral_network/static/css/: style.css
referral_network/templates/: index.html
